# bin_packer_wasm

./: Cargo.toml  LICENSE_MIT  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs
tests/: web.rs
www/: babel.config.js-old  index.html  jest.config.js  package-lock.json  package.json  postcss.config.js  setupJest.js  tailwind.config.js  tailwind.css  test_esm.mjs  test_mod.mjs  tsconfig.json  upload.sh  webpack.config.js
www/src/: App.tsx  BinInput.tsx  BinPackerInterfaces.ts  BinSummary.tsx  Buttons.tsx  Form.tsx  Icons.tsx  ItemInput.tsx  ResultsVisualizer.tsx  Sidebar.tsx  bootstrap.js  bootstrap.ts  index.html  index.ts  index.tsx  styles.css  tailwind.css
www/src/__tests__/: Form.test.tsx
www/src/webgl/: Bin.tsx  BinCanvas.tsx  CameraControls.tsx  Item.tsx  ResultsCanvas.tsx
www/www_backup/: index.js  package-lock.json  package.json
